--- a/featherink/ClientApp/package.json
+++ b/featherink/ClientApp/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "babel-eslint": "10.0.1",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.0.0",
+    "react-redux": "^7.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
     "reactstrap": "^6.3.0",
+    "redux": "^4.0.4",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
