--- a/featherink/appsettings.json
+++ b/featherink/appsettings.json
@@ -1,8 +1,12 @@
 {
   "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-"AllowedHosts": "*"
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "mySQLConnectionString": "datasource=localhost;port=3306;database=featherink;username=root"
+  }
 }
