--- a/featherink/appsettings.json
+++ b/featherink/appsettings.json
@@ -1,12 +1,11 @@
 {
+  "AppSettings": {
+    "Secret": "vgrmm"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "mySQLConnectionString": "datasource=localhost;port=3306;database=featherink;username=root"
-  }
+  "AllowedHosts": "*"
 }
