update JWT add Models

--- a/featherink/appsettings.json
+++ b/featherink/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Secret": "vgrmm"
+    "Secret": "SECRET VGRMM CODE DO NOT CHANGE"
   },
   "Logging": {
     "LogLevel": {
